Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.6, 5.13.1
-
-
0ed29384c2f8307b21fa6ef27f65e56ae1ad8f93 (qt/qtdatavis3d/5.12)
Description
When deleting a window container that contains a Q3DBars (or similar) it will end up showing a black window if a QOpenGLWidget has the same parent. In the example, to reproduce, click on Test | Add and then Test | Remove.
If the Q3DBars is deleted first and then the container then it works fine. This does not happen with a QQuickWindow inside a window container so it is specific to Data Visualization.