Fix black screen when deleting a window container

When deleting a window container with Q3DBars, or any other
visualization type, we ended up with black screen. By calling
deleteLater instead of immediate delete for the renderer we
can avoid this.

Fixes: QTBUG-80168
Change-Id: I6fd5aee5cd26ed1d96aa85b7877160e8996e093a
Reviewed-by: Kaj Grönholm <kaj.gronholm@qt.io>
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>